Corrige sistema de localStorage e CRUD - adiciona validações robustas, logs detalhados e funções de debug

--- a/cadastro.html
+++ b/cadastro.html
@@ -10,450 +10,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/estilos.css">
-  <style>
-    * {
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      box-sizing: border-box;
-    }
-
-    /* Estilos do Modal de Login */
-    .modal-dialog-centered {
-      display: flex;
-      align-items: center;
-      min-height: calc(100% - 2rem);
-    }
-
-    .modal-content {
-      background: white;
-      border: none;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-    }
-
-    .modal-header {
-      border-bottom: 1px solid #e2e8f0;
-    }
-
-    .modal-body {
-      background: white;
-    }
-
-    .form-control:focus {
-      border-color: #2E5F8F;
-      box-shadow: 0 0 0 0.2rem rgba(46, 95, 143, 0.25);
-    }
-
-    .alert-danger {
-      background-color: #fee;
-      border-color: #fcc;
-      color: #c33;
-    }
-
-    .cadastro-wrapper {
-      min-height: 100vh;
-      background: linear-gradient(135deg, #4A7BA7 0%, #2D7A8C 50%, #1F8A8A 100%);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 2rem;
-      position: relative;
-      overflow: hidden;
-      animation: gradientShift 15s ease infinite;
-      background-size: 200% 200%;
-    }
-
-    @keyframes gradientShift {
-      0%, 100% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-    }
-
-    .cadastro-wrapper::before {
-      content: '';
-      position: absolute;
-      top: -50%;
-      right: -20%;
-      width: 800px;
-      height: 800px;
-      background: linear-gradient(135deg, rgba(31, 138, 138, 0.3), rgba(45, 122, 140, 0.2));
-      border-radius: 50%;
-      filter: blur(80px);
-    }
-
-    .cadastro-card {
-      background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(20px);
-      border-radius: 30px;
-      padding: 3rem 2.5rem;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-      max-width: 450px;
-      width: 100%;
-      position: relative;
-      z-index: 1;
-      animation: slideUp 0.6s ease-out;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-    }
-
-    @keyframes slideUp {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .back-btn {
-      position: absolute;
-      top: 2rem;
-      left: 2rem;
-      background: rgba(255, 255, 255, 0.95);
-      color: #2E5F8F;
-      border: none;
-      padding: 0.75rem 1.5rem;
-      border-radius: 50px;
-      font-weight: 600;
-      font-size: 0.9rem;
-      cursor: pointer;
-      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-      z-index: 10;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-
-    .back-btn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-      background: white;
-    }
-
-    .back-btn svg {
-      width: 18px;
-      height: 18px;
-    }
-
-    .icon-header {
-      width: 60px !important;
-      height: 60px !important;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 0 auto 1.5rem;
-      animation: float 3s ease-in-out infinite;
-      transition: transform 0.3s ease;
-    }
-
-    .icon-header:hover {
-      transform: scale(1.05);
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
-
-    .icon-header svg {
-      width: 60px !important;
-      height: 60px !important;
-      max-width: 60px !important;
-      max-height: 60px !important;
-      display: block;
-      filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.15));
-    }
-
-    .cadastro-title {
-      text-align: center;
-      font-size: 1.875rem;
-      font-weight: 700;
-      color: #1e293b;
-      margin-bottom: 0.5rem;
-      letter-spacing: -0.02em;
-      line-height: 1.2;
-    }
-
-    .cadastro-subtitle {
-      text-align: center;
-      font-size: 1rem;
-      font-weight: 400;
-      color: #2E5F8F;
-      margin-bottom: 2rem;
-      line-height: 1.5;
-    }
-
-    .form-input {
-      width: 100%;
-      padding: 0.875rem 1.25rem;
-      border: 2px solid #e2e8f0;
-      border-radius: 12px;
-      font-size: 0.9375rem;
-      font-weight: 400;
-      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-      background: #f8fafc;
-      margin-bottom: 1rem;
-    }
-
-    .form-input:focus {
-      outline: none;
-      border-color: #2E5F8F;
-      background: white;
-      box-shadow: 0 0 0 4px rgba(46, 95, 143, 0.1);
-      transform: translateY(-2px);
-    }
-
-    .form-input:hover:not(:focus) {
-      border-color: #cbd5e1;
-    }
-
-    .form-input::placeholder {
-      color: #94a3b8;
-    }
-
-    .btn-primary-custom {
-      width: 100%;
-      padding: 1rem;
-      background: linear-gradient(135deg, #2E5F8F, #1B3A52);
-      color: white;
-      border: none;
-      border-radius: 12px;
-      font-weight: 600;
-      font-size: 1rem;
-      letter-spacing: 0.01em;
-      cursor: pointer;
-      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-      box-shadow: 0 4px 15px rgba(0, 128, 128, 0.4);
-      margin-top: 0.5rem;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .btn-primary-custom::before {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 0;
-      height: 0;
-      border-radius: 50%;
-      background: rgba(255, 255, 255, 0.3);
-      transform: translate(-50%, -50%);
-      transition: width 0.6s, height 0.6s;
-    }
-
-    .btn-primary-custom:hover::before {
-      width: 300px;
-      height: 300px;
-    }
-
-    .btn-primary-custom:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 8px 25px rgba(0, 165, 168, 0.5);
-    }
-
-    .btn-primary-custom:active {
-      transform: translateY(0);
-    }
-
-    .btn-secondary-custom {
-      width: 100%;
-      padding: 1rem;
-      background: white;
-      color: #1B6F8C;
-      border: 2px solid #1B6F8C;
-      border-radius: 12px;
-      font-weight: 600;
-      font-size: 1rem;
-      letter-spacing: 0.01em;
-      cursor: pointer;
-      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-      margin-top: 0.75rem;
-      position: relative;
-    }
-
-    .btn-secondary-custom:hover {
-      background: #80DEEA;
-      transform: translateY(-2px);
-      box-shadow: 0 4px 15px rgba(0, 96, 100, 0.2);
-    }
-
-    .btn-secondary-custom:active {
-      transform: translateY(0);
-    }
-
-    .link-custom {
-      color: #1B6F8C;
-      text-decoration: none;
-      font-weight: 500;
-      position: relative;
-      transition: color 0.3s;
-    }
-
-    .link-custom::after {
-      content: '';
-      position: absolute;
-      bottom: -2px;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background: #2E5F8F;
-      transition: width 0.3s ease;
-    }
-
-    .link-custom:hover {
-      color: #2E5F8F;
-    }
-
-    .link-custom:hover::after {
-      width: 100%;
-    }
-
-    .text-center-custom {
-      text-align: center;
-      margin-top: 1.5rem;
-      font-size: 0.9rem;
-      color: #2E5F8F;
-    }
-
-    .particles {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      z-index: 0;
-    }
-
-    @media (max-width: 576px) {
-      .cadastro-card {
-        padding: 2rem 1.5rem;
-        margin: 1rem;
-        max-width: calc(100% - 2rem);
-      }
-      
-      .back-btn {
-        top: 1rem;
-        left: 1rem;
-        padding: 0.5rem 1rem;
-        font-size: 0.8rem;
-      }
-
-      .cadastro-title {
-        font-size: 1.5rem;
-        margin-bottom: 0.75rem;
-      }
-
-      .cadastro-subtitle {
-        font-size: 0.9rem;
-        margin-bottom: 1.5rem;
-      }
-
-      .icon-header svg {
-        width: 60px;
-        height: 60px;
-      }
-
-      .form-input {
-        font-size: 0.95rem;
-        padding: 0.75rem 1rem;
-      }
-
-      .btn-primary-custom,
-      .btn-secondary-custom {
-        font-size: 0.95rem;
-        padding: 0.875rem 1.5rem;
-      }
-
-      /* Melhorias do Modal de Login */
-      .modal-dialog {
-        margin: 1rem;
-        max-width: calc(100% - 2rem);
-      }
-
-      .modal-content {
-        border-radius: 16px;
-      }
-
-      .modal-header {
-        padding: 1rem 1.25rem;
-      }
-
-      .modal-body {
-        padding: 1.25rem !important;
-      }
-
-      .modal-title {
-        font-size: 1.25rem;
-      }
-
-      .form-label {
-        font-size: 0.875rem;
-        margin-bottom: 0.5rem;
-      }
-
-      .form-control {
-        font-size: 0.95rem;
-        padding: 0.75rem 1rem;
-      }
-
-      .btn {
-        font-size: 0.95rem;
-        padding: 0.75rem 1.25rem;
-      }
-
-      .alert {
-        font-size: 0.875rem;
-        padding: 0.75rem;
-      }
-    }
-
-    @media (max-width: 400px) {
-      .cadastro-card {
-        padding: 1.5rem 1rem;
-        margin: 0.75rem;
-        max-width: calc(100% - 1.5rem);
-      }
-
-      .cadastro-title {
-        font-size: 1.35rem;
-      }
-
-      .cadastro-subtitle {
-        font-size: 0.85rem;
-      }
-
-      .icon-header svg {
-        width: 50px;
-        height: 50px;
-      }
-
-      .form-input {
-        font-size: 0.875rem;
-        padding: 0.625rem 0.875rem;
-      }
-
-      .btn-primary-custom,
-      .btn-secondary-custom {
-        font-size: 0.875rem;
-        padding: 0.75rem 1.25rem;
-      }
-
-      .modal-dialog {
-        margin: 0.5rem;
-        max-width: calc(100% - 1rem);
-      }
-
-      .modal-header,
-      .modal-body {
-        padding: 1rem !important;
-      }
-
-      .modal-title {
-        font-size: 1.125rem;
-      }
-    }
-  </style>
 </head>
 <body>
   <div class="cadastro-wrapper">
@@ -535,6 +91,16 @@
   <script src="assets/js/auth-local.js"></script>
   <script src="assets/js/scripts.js"></script>
   <script>
+    // Aguarda AuthLocal estar disponível
+    function aguardarAuthLocal(callback) {
+      if (typeof AuthLocal !== 'undefined') {
+        callback();
+      } else {
+        console.log('Aguardando AuthLocal carregar...');
+        setTimeout(() => aguardarAuthLocal(callback), 50);
+      }
+    }
+
     // Abre o modal de login
     document.getElementById('btnLogin').addEventListener('click', (e) => {
       e.preventDefault();
@@ -545,19 +111,25 @@
     // Processa o login
     document.getElementById('formLogin').addEventListener('submit', (e) => {
       e.preventDefault();
-      const formData = new FormData(e.target);
-      const email = formData.get('email');
-      const senha = formData.get('senha');
-      const errorDiv = document.getElementById('loginError');
+      
+      aguardarAuthLocal(() => {
+        const formData = new FormData(e.target);
+        const email = formData.get('email');
+        const senha = formData.get('senha');
+        const errorDiv = document.getElementById('loginError');
 
-      const resultado = AuthLocal.login(email, senha);
+        console.log('Tentando login com:', email);
+        const resultado = AuthLocal.login(email, senha);
+        console.log('Resultado do login:', resultado);
 
-      if (resultado.success) {
-        window.location.href = 'home.html';
-      } else {
-        errorDiv.textContent = resultado.error?.message || 'Erro ao fazer login';
-        errorDiv.classList.remove('d-none');
-      }
+        if (resultado.success) {
+          alert('Login realizado com sucesso!');
+          window.location.href = 'home.html';
+        } else {
+          errorDiv.textContent = resultado.error?.message || 'Erro ao fazer login';
+          errorDiv.classList.remove('d-none');
+        }
+      });
     });
 
     // Efeitos visuais interativos
